<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtSaluta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/benvenuto"
                    android:textSize="50sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/coloreRosso"
                    android:padding="20sp"/>

                <Button
                    android:id="@+id/bntSaluta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saluta" />

                <Button
                    android:id="@+id/btnAltoBasso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gioca" />

                <Button
                    android:id="@+id/btnAccelerometro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/startAccelerometro" />

                <Button
                    android:id="@+id/btntris"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trisGame" />

                <Button
                    android:id="@+id/btnTrisVsPc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trisVsPc"/>

                <Button
                    android:id="@+id/btnforza4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonForza4" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>